--- a/less/config.less
+++ b/less/config.less
@@ -63,7 +63,7 @@ input {
 @editor-height: 5em;
 
 //images
-@playersheet-background: no-repeat url('./assets/image/paxelfica-fondfdp.webp');
+@playersheet-background: no-repeat url('./assets/image/fond.png');
 @itemsheet-background: no-repeat url('./assets/image/itemhheet_background.webp');
 @npcsheet-background: no-repeat url('./assets/image/paxelfica-fondfdp.webp');
 @chat-background: no-repeat url('./assets/image/chat_background.webp');
