--- a/less/player-sheet.less
+++ b/less/player-sheet.less
@@ -1,8 +1,9 @@
 .cleenmain.sheet.player {
     .window-content {
-        background: @playersheet-background;
+        background: @playersheet-background;        
         background-color: @clear-background;
         font-family: @default-font;
+        background-size: 250px 100%;
     }
     textarea {
         resize: none;
