Refactor gestion des rolls

--- a/templates/actor/tab/boons.html
+++ b/templates/actor/tab/boons.html
@@ -11,7 +11,7 @@
         <div class="boon-card" data-item-id="{{item.id}}">
             <div class="boon-name-line">
                 {{#if ../isPlayer}}
-                {{#if item.data.data.developed}}
+                {{#if item.data.developed}}
                 <i class="fas fa-square"></i>
                 {{else}}
                 <i class="far fa-square"></i>
@@ -29,11 +29,11 @@
                 </div>
                 {{/if}}
             </div>
-            <div class="boon-description">{{{item.data.data.description}}}</div>
-            {{#if item.data.data.limitedUse}}
+            <div class="boon-description">{{{item.data.description}}}</div>
+            {{#if item.data.limitedUse}}
             <div class="boon-used-line">
-                <label for="item.data.data.used">{{localize "CLEENMAIN.boon.used"}}</label>
-                <input class="checkbox inline-edit" data-field="data.used" id="{{item.id}}" name="item.data.data.used" type="checkbox" {{checked item.data.data.used}}>
+                <label for="item.data.used">{{localize "CLEENMAIN.boon.used"}}</label>
+                <input class="checkbox inline-edit" data-field="data.used" id="{{item.id}}" name="item.data.used" type="checkbox" {{checked item.data.used}}>
                 
             </div>
             {{/if}}
