--- a/templates/chat/rolldialog.html
+++ b/templates/chat/rolldialog.html
@@ -1,12 +1,12 @@
 <div class="dialog">
   <div class="intro">
-    <div class="introImg" style="background-image: url('{{skillData.actingCharImg}}')"></div>
+    <div class="introImg" style="background-image: url('{{actingCharImg}}')"></div>
     <div class="introtext">
-      {{skillData.introText}} 
+      {{introText}} 
     </div>
   </div>
   <div class="formula">
-    {{skillData.skillRollFormula}}
+    {{skillRollFormula}}
   </div>
 
   <div class="rollmodifier">
