Jets d'attaque et de dommages

--- a/cleenmain.css
+++ b/cleenmain.css
@@ -104,7 +104,7 @@ input {
 .cleenmain.sheet.player .main .leftcolumn .skills .skill-line .skill-dev {
   width: 10%;
 }
-.cleenmain.sheet.player .main .leftcolumn .skills .skill-line .item-roll {
+.cleenmain.sheet.player .main .leftcolumn .skills .skill-line .skill-roll {
   width: 20%;
   text-align: center;
 }
