--- a/templates/actor/player.html
+++ b/templates/actor/player.html
@@ -25,7 +25,7 @@
                         <div class="skill-line">
                             <div class="skill-name" title="{{skill.data.description}}" >{{skill.name}}</div>
                             <div class="skill-value">{{skill.data.value}}</div>
-                            <a class="item-roll" data-type="skill" data-id="{{skill._id}}">
+                            <a class="skill-roll" data-id="{{skill._id}}">
                                 <i class="fas fa-dice"></i>
                             </a></th>
                         </div>
