--- a/less/player-sheet.less
+++ b/less/player-sheet.less
@@ -68,7 +68,7 @@
                     .skill-dev{       
                         width: 10%;
                     }
-                    .item-roll{       
+                    .skill-roll{       
                         width: 20%;
                         text-align: center;
                     }
