--- a/templates/chat/rollResult.html
+++ b/templates/chat/rollResult.html
@@ -4,8 +4,8 @@
             <div class="introText">{{introText}}</div>
         </div>
     </div>  
-        {{#each skillData.applyModifier as |mod id|}}    
-        <div class="modifierText">{{mod}}</div>
+        {{#each applyModifiers as |mod id|}}    
+            <div class="modifierText">{{mod}}</div>
         {{/each}}
         <div class="formulaText">
             {{localize "CLEENMAIN.chatmessage.rollformula"}}  {{formula}}
